--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -13,6 +13,7 @@
 {% endblock %}
 
 {% block content %}
+  <div class="main-container">
     <h3>Business</h3>
     <p>
         I am a senior Electrical Engineering student at the University of Notre Dame, though much of my free time has been dedicated to Computer Science.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a> or head to the <a href="/projects">projects</a> page to look at my technical experience!
@@ -23,4 +24,5 @@
         When I'm not working, studying, reading, or tinkering, you can find me on the golf course shanking
         balls into beverage carts.  Weather permitting, it's also a fair bet you'll catch me flailing around in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain" target="_blank">Fun Fact</a>: In Minnesota, there are more than 11,000 to choose from).
     </p>
+  </div> <!-- /.main-container -->
 {% endblock %}
