--- a/mysite/templates/about_site.html
+++ b/mysite/templates/about_site.html
@@ -13,6 +13,7 @@
 {% endblock %}
 
 {% block content %}
+  <div class="main-container">
     <h3>The Tools</h3>
     <p>
         This site was built using <a href="http://flask.pocoo.org" target="_blank">Flask</a>.  Flask is a lightweight framework built to get Python web apps up and running quickly.
@@ -23,4 +24,5 @@
     <p>
         Stay Tuned: The source for this website will be available soon!
     </p>
+  </div> <!-- /.main-container -->
 {% endblock %}
