--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -13,8 +13,10 @@
 {% endblock %}
 
 {% block content %}
+  <div class="main-container">
     <h3>Thanks for stopping by!</h3>
     <p>
         My name is Calvin Belden, and you've stumbled upon my latest project.  Feel free to explore my expose and leave a comment!
     </p>
+  </div> <!-- ./main-container -->
 {% endblock %}
