--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -5,7 +5,21 @@
 {% endblock %}
 
 {% block style %}
-    
+
+.sidebar {
+    width: 20%;
+    height: auto;
+    min-width: 150px;
+    max-width: 200px;
+    margin-left: 10%;
+    float: left;
+    margin-bottom: 10px;
+    position: fixed;
+    background-color: rgb(19, 19, 19);
+    opacity: .7;
+    border-radius: 4px;
+    box-shadow: 5px 5px 5px 2px rgb(30, 30, 30);
+}
 {% endblock %}
 
 {% block projects_nav %}
@@ -17,8 +31,9 @@
 {% endblock %}
 
 {% block content %}
+  <div class="main-container">
     <h3 id="mts" style="padding-top: 40px; margin-top: -40px;">MTS Systems Corporation</h3>
-    <h4>Languages: C#</h4>
+    <h4><em>Automated UI Testing</em>: C#</h4>
     <p>
         This past summer I interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces test devices for a variety of fields including the materials, automotive, and aerospace industries.  MTS provides a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>, that controls several of these testing rigs.
     </p>
@@ -26,8 +41,9 @@
         I was a member the automated test team that worked with TestSuite, and I spent the summer implementing UI drivers and writing UI test cases in C#.  It was rewarding converting tedious manual tests into automated processes that could be run every night (vs. at the end of every release!).
     </p>
 
-    <h3 id="gentex" style="padding-top: 40px; margin-top: -40px;">Gentex Corporation</h3>
-    <h4>Languages: C, Ruby</h4>
+    <h3 id="gentex" style="padding-top: 60px; margin-top: -40px;">Gentex Corporation</h3>
+    <h4><em>Firmware Dev</em>: C</h4>
+    <h4><em>Integration Testing</em>: Ruby</h4>
     <p>
         The summer of 2012 I interned as a software engineer at <a href="http://www.gentex.com/" target="_blank">Gentex</a> in Zeeland, Michigan.  Gentex manufactures car mirrors, and I wrote commands to retrieve and send diagnostic information to and from the mirror.
     </p>
@@ -35,21 +51,20 @@
         One common task was retrieving and writing data stored in the mirror's EEPROM.  I also wrote integration tests to ensure that the mirror was performing appropriately (correctly dimming, displaying accurate compass readings, displaying accurate GPS information, etc.).
     </p>
 
-    <h3 id="this_site" style="padding-top: 40px; margin-top: -40px;">calbelden.com</h3>
-    <h4>Languages - HTML, CSS, Python</h4>
+    <h3 id="this_site" style="padding-top: 60px; margin-top: -40px;">calbelden.com</h3>
+    <h4>HTML, CSS, Python</h4>
     <p>
         I began calbelden.com earlier this summer to learn html and css; I also saw this as an opportunity to keep my Python skills fresh!  My hope is to use the knowledge I've learned here and apply it to a food ordering web-app geared towards Notre Dame's dorm restaurants, which are all student owned/runned).
     </p>
+  </div> <!-- /.main-container -->
 {% endblock %}
 
 {% block sidebar %}
-    <div class="sidebar">
         <ul class="nav nav-list">
           <li class="nav-header">Sections</li>
           <li><a href="#mts">MTS</a></li>
           <li><a href="#gentex">Gentex</a></li>
           <li><a href="#this_site">calbelden.com</a></li>
         </ul>
-    </div>
 {% endblock %}
 
