--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -13,6 +13,7 @@
 {% endblock %}
 
 {% block content %}
+  <div class="main-container">
     <h3>Send me a message!</h3>
     <form action="">
         <label for="name">Your Name:</label>
@@ -29,4 +30,5 @@
 
         <input type="submit" id="submit">
     </form>
+  </div> <!-- ./main-container -->
 {% endblock %}
