--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -7,16 +7,12 @@
 {% block style %}
 
 .sidebar {
-    width: 20%;
+    width: 175px;
     height: auto;
-    min-width: 150px;
-    max-width: 200px;
-    margin-left: 10%;
+    margin-right: 25px;
     float: left;
-    margin-bottom: 10px;
-    position: fixed;
     background-color: rgb(19, 19, 19);
-    opacity: .7;
+    opacity: .8;
     border-radius: 4px;
     box-shadow: 5px 5px 5px 2px rgb(30, 30, 30);
 }
@@ -32,7 +28,7 @@
 
 {% block content %}
   <div class="main-container">
-    <h3 id="mts" style="padding-top: 40px; margin-top: -40px;">MTS Systems Corporation</h3>
+    <h3 id="mts">MTS Systems Corporation</h3>
     <h4><em>Automated UI Testing</em>: C#</h4>
     <p>
         This past summer I interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces test devices for a variety of fields including the materials, automotive, and aerospace industries.  MTS provides a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>, that controls several of these testing rigs.
@@ -57,14 +53,5 @@
         I began calbelden.com earlier this summer to learn html and css; I also saw this as an opportunity to keep my Python skills fresh!  My hope is to use the knowledge I've learned here and apply it to a food ordering web-app geared towards Notre Dame's dorm restaurants, which are all student owned/runned).
     </p>
   </div> <!-- /.main-container -->
-{% endblock %}
-
-{% block sidebar %}
-        <ul class="nav nav-list">
-          <li class="nav-header">Sections</li>
-          <li><a href="#mts">MTS</a></li>
-          <li><a href="#gentex">Gentex</a></li>
-          <li><a href="#this_site">calbelden.com</a></li>
-        </ul>
 {% endblock %}
 
