--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -26,11 +26,11 @@
             <a class="brand" href="/">calvin</a>
             <div class="nav-collapse">
               <ul class="nav">
-                <li class={%block home_nav%}{%endblock%}><a href="/"><i class="icon-home icon-white"></i> Home</a></li>
-                <li class={%block about_nav%}{%endblock%}><a href="/about">about</a></li>
-                <li class={%block projects_nav%}{%endblock%}><a href="/projects">projects</a></li>
-                <li class={%block contact_nav%}{%endblock%}><a href="/contact">contact</a></li>
-                <li class={%block about_site_nav%}{%endblock%}><a href="/about_site">this site</a></li>
+                <li {%block home_nav%}{%endblock%}><a href="/"><i class="icon-home icon-white"></i> Home</a></li>
+                <li {%block about_nav%}{%endblock%}><a href="/about">about</a></li>
+                <li {%block projects_nav%}{%endblock%}><a href="/projects">projects</a></li>
+                <li {%block contact_nav%}{%endblock%}><a href="/contact">contact</a></li>
+                <li {%block about_site_nav%}{%endblock%}><a href="/about_site">this site</a></li>
                 {%block pnf_nav%}{%endblock%}
               </ul>
             </div><!-- /.nav-collapse -->
