--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block projects_nav %}
-    "active"
+    class="active"
 {% endblock %}
 
 {% block title %}
@@ -37,7 +37,7 @@
         I was a member the automated test team that worked with TestSuite, and I spent the summer implementing UI drivers and writing UI test cases in C#.  It was rewarding converting tedious manual tests into automated processes that could be run every night (vs. at the end of every release!).
     </p>
 
-    <h3 id="gentex" style="padding-top: 60px; margin-top: -40px;">Gentex Corporation</h3>
+    <h3 id="gentex">Gentex Corporation</h3>
     <h4><em>Firmware Dev</em>: C</h4>
     <h4><em>Integration Testing</em>: Ruby</h4>
     <p>
@@ -47,7 +47,7 @@
         One common task was retrieving and writing data stored in the mirror's EEPROM.  I also wrote integration tests to ensure that the mirror was performing appropriately (correctly dimming, displaying accurate compass readings, displaying accurate GPS information, etc.).
     </p>
 
-    <h3 id="this_site" style="padding-top: 60px; margin-top: -40px;">calbelden.com</h3>
+    <h3 id="this_site">calbelden.com</h3>
     <h4>HTML, CSS, Python</h4>
     <p>
         I began calbelden.com earlier this summer to learn html and css; I also saw this as an opportunity to keep my Python skills fresh!  My hope is to use the knowledge I've learned here and apply it to a food ordering web-app geared towards Notre Dame's dorm restaurants, which are all student owned/runned).
