--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block about_nav %}
-    "active"
+    class="active"
 {% endblock %}
 
 {% block title %}
@@ -16,7 +16,7 @@
   <div class="main-container">
     <h3>Business</h3>
     <p>
-        I am a senior Electrical Engineering student at the University of Notre Dame, though much of my free time has been dedicated to Computer Science.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a> or head to the <a href="/projects">projects</a> page to look at my technical experience!
+        I am a senior Electrical Engineering student at the University of Notre Dame, though much of my free time has been dedicated to programming.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a> or head to the <a href="/projects">projects</a> page to look at my technical experience!
     </p>
 
     <h3>Recreation</h3>
