stubbed out form form processing. changed verbage to third person. added page icon

--- a/mysite/templates/404.html
+++ b/mysite/templates/404.html
@@ -13,6 +13,8 @@
 {% endblock %}
 
 {% block content %}
-    <h3>Yikes</h3>
-    <p>{{ error_message | safe }}</p>
+    <div class="main-container">
+        <h3>Yikes</h3>
+        <p>{{ error_message | safe }}</p>
+    </div> <!-- ./main-container -->
 {% endblock %}
