--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -31,26 +31,26 @@
     <h3 id="mts">MTS Systems Corporation</h3>
     <h4><em>Automated UI Testing</em>: C#</h4>
     <p>
-        This past summer I interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces test devices for a variety of fields including the materials, automotive, and aerospace industries.  MTS provides a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>, that controls several of these testing rigs.
+        This past summer Calvin interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces test devices for a variety of fields including the materials, automotive, and aerospace industries, and MTS provides a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>, that controls several of these testing rigs.
     </p>
     <p>
-        I was a member the automated test team that worked with TestSuite, and I spent the summer implementing UI drivers and writing UI test cases in C#.  It was rewarding converting tedious manual tests into automated processes that could be run every night (vs. at the end of every release!).
+        Cal was a member the automated test team that worked with TestSuite, and he spent the summer implementing UI drivers and writing automated UI test cases in C#.  It was rewarding converting tedious manual tests (that usually get squeezed into the end of a release) into automated processes that could be run every night.
     </p>
 
     <h3 id="gentex">Gentex Corporation</h3>
     <h4><em>Firmware Dev</em>: C</h4>
     <h4><em>Integration Testing</em>: Ruby</h4>
     <p>
-        The summer of 2012 I interned as a software engineer at <a href="http://www.gentex.com/" target="_blank">Gentex</a> in Zeeland, Michigan.  Gentex manufactures car mirrors, and I wrote commands to retrieve and send diagnostic information to and from the mirror.
+        The summer of 2012 Calvin interned as a software engineer at <a href="http://www.gentex.com/" target="_blank">Gentex</a> in Zeeland, Michigan.  Gentex manufactures car mirrors, and Cal wrote commands to retrieve and send diagnostic information to and from the mirror.
     </p>
     <p>
-        One common task was retrieving and writing data stored in the mirror's EEPROM.  I also wrote integration tests to ensure that the mirror was performing appropriately (correctly dimming, displaying accurate compass readings, displaying accurate GPS information, etc.).
+        Calvin also wrote integration tests to ensure the car mirror's core features were behaving appropriately.  He tested features like automatic dimming and displaying accurate compass and GPS information.
     </p>
 
     <h3 id="this_site">calbelden.com</h3>
     <h4>HTML, CSS, Python</h4>
     <p>
-        I began calbelden.com earlier this summer to learn html and css; I also saw this as an opportunity to keep my Python skills fresh!  My hope is to use the knowledge I've learned here and apply it to a food ordering web-app geared towards Notre Dame's dorm restaurants, which are all student owned/runned).
+        calbelden.com started up earlier this summer as a means to learn html and css; the website also served as an opportunity to keep Calvin's Python skills fresh.  The original hope was to use the knowledge learned here and apply it to a food ordering app geared towards Notre Dame's dorm restaurants, which are all student owned/runned.  The food project will likely begin sometime this fall!
     </p>
   </div> <!-- /.main-container -->
 {% endblock %}
