--- a/mysite/static/custom/custom.css
+++ b/mysite/static/custom/custom.css
@@ -1,5 +1,6 @@
 /* General navbar-inner (part with buttons) */
 .navbar-inner {
+  /* colorzilla generated code! */
 background: #006e2e; /* Old browsers */
 background: -moz-linear-gradient(top, #006e2e 0%, #006e2e 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#006e2e), color-stop(100%,#006e2e)); /* Chrome,Safari4+ */
@@ -10,6 +11,7 @@ background: linear-gradient(to bottom, #006e2e 0%,#006e2e 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', endColorstr='#006e2e',GradientType=0 ); /* IE6-9 */
 }
 
+/* Gets rid of border (looks bad) */
 .navbar-inner{
   border: none;
 }
@@ -22,11 +24,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
     border-radius: 2px;
 }
 
+/* Keep hover color of nabar white */
 .navbar .nav > li > a:hover {
   color: white;
 }
 
-/* color transition bizness */
+/* Color transition bizness for navbar buttons */
 .navbar .nav li {
     transition: background-color .5s;
     -webkit-transition: background-color .5s;
@@ -46,7 +49,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
     background-color: rgb(65, 167, 56)
 }
 
-/* brand */
+/* Brand: TODO: make cooler */
 .navbar .brand {
     color: rgb(255, 255, 255);
     text-shadow: none;
@@ -67,7 +70,7 @@ body {
     color: white;
 
     /* background image */
-    background: url(italy.jpeg) no-repeat center center fixed; 
+    background: url(misty_hills.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -91,6 +94,7 @@ body {
     height: 1px;
 }
 
+/* Wrapper around main, fixed content */
 .main-content-container {
     width: 80%;
     float: left;
@@ -108,28 +112,12 @@ body {
     /* appearance */
     padding: 1px 12px 8px 10px;
     background-color: rgb(19, 19, 19);
-    opacity: .8;
+    opacity: .9;
     border-radius: 4px;
     box-shadow: 5px 5px 5px 2px rgb(30, 30, 30);
 }
 
-.main-container:after {
-  background-color: black;
-}
-
-.nav-header {
-    font-family: Oxygen;
-    color: white;
-    font-size: 150%;
-    text-shadow: none;
-}
-
-.nav-list > li > a {
-    font-family: Oxygen;
-    font-size: 120%;
-    text-shadow: none;
-}
-
+/* text appearance - spacing */
 p {
     font-size: 130%;
     line-height: 1.3em;
@@ -147,18 +135,40 @@ a {
     color: rgb(65, 221, 59);
 }
 
-form {
-  margin-left: 4%;
+.form-wrap {
+    margin-left: 50px;
 }
 
 /* contact form bizness */
-#message {
-  height: 10em;
+.single-line-input {
+    width: 250px;
 }
 
-#submit {
-  display: block;
-  color: rgb(31, 25, 25);
+.multi-line-input {
+    width: 300px;
+    height: 80px;
+
+}
+
+input[type="submit"] {
+    display: block;
+    color: rgb(68, 73, 66);;
+    background-color: white;
+    border-radius: 5px;
+    border: none;
+    width: 250px;
+    margin-top: 20px;
+
+    /* transition stuff (for :hover) */
+    transition: background-color .8s;
+    -webkit-transition: background-color .8s;
+    -moz-transition: background-color .8s;
+    -o-transition: background-color .8s;
+}
+
+input[type="submit"]:hover {
+    color: white;
+    background-color: rgb(82, 197, 72);
 }
 
 
