--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -16,13 +16,13 @@
   <div class="main-container">
     <h3>Business</h3>
     <p>
-        I am a senior Electrical Engineering student at the University of Notre Dame, though much of my free time has been dedicated to programming.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a> or head to the <a href="/projects">projects</a> page to look at my technical experience!
+        Calvin is a senior Electrical Engineering student at the University of Notre Dame, though much of his free time has been dedicated to programming.  If you'd like, you can take a look at his <a href="{{url_for('static', filename='resume/resume.pdf')}}">resume</a> or head to the <a href="/projects">projects</a> page to look at his technical experience.
     </p>
 
     <h3>Recreation</h3>
     <p>
-        When I'm not working, studying, reading, or tinkering, you can find me on the golf course shanking
-        balls into beverage carts.  Weather permitting, it's also a fair bet you'll catch me flailing around in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain" target="_blank">Fun Fact</a>: In Minnesota, there are more than 11,000 to choose from).
+        When he's not working, studying, reading, or tinkering, you can find Cal on the golf course shanking
+        balls into beverage carts.  Weather permitting, it's also a fair bet you'll catch him swimming in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain" target="_blank">Fun Fact</a>: In Minnesota, there are more than 11,000 to choose from).
     </p>
   </div> <!-- /.main-container -->
 {% endblock %}
