--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -5,6 +5,7 @@
   <meta name="description" content="A fantastic review covering the limited life works of Calvin Belden, an Electrical Engineering student and Software Engineer at the University of Notre Dame.">
   <meta name="keywords" content="calvin, belden, electrical, computer science, computer, electrical engineer, software engineer, software, developer, programmer, funny, guy, dude, man, brother, friend, university, notre dame">
   <title>{% block pagetitle %}Cal Belden - Welcome{% endblock %}</title>
+  <link rel="shortcut icon" href="{{url_for('static', filename='custom/video_display.ico')}}" />
   <link href="{{url_for('static', filename='assets/css/bootstrap.css')}}" rel="stylesheet">
   <link href="{{url_for('static', filename='assets/css/bootstrap-responsive.css')}}" rel="stylesheet">
   <link href="{{url_for('static', filename='custom/custom.css')}}" rel="stylesheet">
