--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="main-container">
+  <div class="main-container" id="main-container">
     <h3>Business</h3>
     <p>
         Calvin is a senior Electrical Engineering student at the University of Notre Dame, though much of his free time has been dedicated to programming.  If you'd like, you can take a look at his <a href="{{url_for('static', filename='resume/resume.pdf')}}">resume</a> or head to the <a href="/projects">projects</a> page to look at his technical experience.
