--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="main-container">
+  <div class="main-container" id="main-container">
     <h3>Thanks for stopping by!</h3>
     <p>
         Greetings; you've stumbled upon Calvin Belden's latest project.  Feel free to explore his expos&eacute;  and leave a comment!
