--- a/mysite/templates/thank_you.html
+++ b/mysite/templates/thank_you.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="main-container">
+  <div class="main-container" id="main-container">
     <h3>Thank you {{ name }}!</h3>
     <p>
         Your message was successfully sent; Calvin will get back to you shortly.
