--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="main-container">
+  <div class="main-container" id="main-container">
     <h3 id="mts">MTS Systems Corporation</h3>
     <h4><em>Automated UI Testing</em>: C#</h4>
     <p>
