--- a/mysite/templates/404.html
+++ b/mysite/templates/404.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="main-container">
+    <div class="main-container" id="main-container">
         <h3>Yikes</h3>
         <p>{{ error_message | safe }}</p>
     </div> <!-- ./main-container -->
