--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="main-container">
+  <div class="main-container" id="main-container">
     <h3>Send me a message!</h3>
     <div class="form-wrap">
         <form action="/contact" method="post">
